<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/gameCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/gameFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </android.support.design.widget.CoordinatorLayout>

    <!--Layout for the button, which will be hidden at game start-->
    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
        android:id="@+id/game1Btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/gameMenuBtn1"/>

    <Button
        android:id="@+id/game2Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game1Btn"
        android:text="@string/gameMenuBtn2"/>

    <Button
        android:id="@+id/game3Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game2Btn"
        android:text="@string/gameMenuBtn3"/>


    <Button
        android:id="@+id/game4Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game3Btn"
        android:text="@string/gameMenuBtn4"/>

    </RelativeLayout>

</RelativeLayout>