<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundMain"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:backgroundTint="@color/colorPrimary">

            <ImageButton
                android:id="@+id/helpBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/back_white" />

            <TextView
                android:fontFamily="@font/font_jap"
                android:layout_marginStart="100dp"
                android:layout_width="wrap_content"
                android:text="@string/action_help"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#fdfefe"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:fontFamily="@font/font_jap"
        android:textColor="#000000"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/symbolsHeader"
        android:text="@string/symbols_header"/>

    <TextView
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/symbolsHeader"
        android:id="@+id/helpText1"
        android:maxLines="7"
        android:lines="7"
        android:text="@string/symbols_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:fontFamily="@font/font_jap"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/helpText1"
        android:id="@+id/game1Header"
        android:text="@string/game1_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/game1Header"
        android:id="@+id/helpText2"
        android:maxLines="7"
        android:lines="5"
        android:text="@string/game1_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:fontFamily="@font/font_jap"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/helpText2"
        android:id="@+id/game2Header"
        android:text="@string/game2_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/game2Header"
        android:id="@+id/helpText3"
        android:maxLines="7"
        android:lines="4"
        android:text="@string/game2_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</RelativeLayout>